one page secont com

--- a/index.html
+++ b/index.html
@@ -117,17 +117,74 @@
 
                             <div class="col-sm-12 col-md-6">
                                 <div class="inner-box top-pad-no">
+                                    <img class="img-tm" src="assets/image/header-a.png" alt="photos">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="swiper-slide " style="background-image: url('ass ets/image/banar.jpg'); background-repeat: no-repeat;">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-12 col-md-6">
+                                <div class="inner-box">
+                                    <div class="bannar-text">
+                                        <h1 class="h1">
+                                            BANGLADESH <span>COVID-19 HOSPITAL</span>
+                                        </h1>
+                                        <p class="para">
+                                            The Coronavirus (COVID-19) was first reported in Wuhan, Hubei, China in December 2019, the outbreak was later recognized as a pandemic by the World Health Organization (WHO) on 11 March 2020.
+                                        </p>
+                                        <div class="primary-btn">
+                                            <a class="btn btn-primariey">Get a Hospital</a>
+
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+
+                            <div class="col-sm-12 col-md-6">
+                                <div class="inner-box top-pad-no">
+                                    <img class="img-tm" src="assets/image/slider2.jpg" alt="photos">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="swiper-slide " style="background-image: url('ass ets/image/banar.jpg'); background-repeat: no-repeat;">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-12 col-md-6">
+                                <div class="inner-box">
+                                    <div class="bannar-text">
+                                        <h1 class="h1">
+                                            GET ALL COVID-19 <span>EMARGENCY SERVICE</span>
+                                        </h1>
+                                        <p class="para">
+                                            The Coronavirus (COVID-19) was first reported in Wuhan, Hubei, China in December 2019, the outbreak was later recognized as a pandemic by the World Health Organization (WHO) on 11 March 2020.
+                                        </p>
+                                        <div class="primary-btn">
+                                            <a class="btn btn-primariey">Get a Hospital</a>
+
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+
+                            <div class="col-sm-12 col-md-6">
+                                <div class="inner-box top-pad-no">
                                     <img class="img-tm" src="assets/image/hospital.jpg" alt="photos">
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!-- <div class="swiper-slide">Slide 2</div>
-            <div class="swiper-slide">Slide 3</div> -->
 
             </div>
-        </div>
     </section>
 
     <!-- services -->
@@ -142,7 +199,7 @@
                 <div class="col-sm-6 col-md-6 col-lg-6 gutter-y">
                     <div class="inner-box pad-r">
                         <div class="img-camber">
-                            <img src="assets/image/hospital1.png" alt="">
+                            <img src="assets/image/private.jpg" alt="">
 
                         </div>
                         <div class="text-camber">
@@ -158,7 +215,7 @@
                 <div class="col-sm-6 col-md-6 col-lg-6 gutter-y">
                     <div class="inner-box pad-l">
                         <div class="img-camber">
-                            <img src="assets/image/hospital1.png" alt="">
+                            <img src="assets/image/public.jpg" alt="">
 
                         </div>
                         <div class="text-camber">
@@ -183,19 +240,30 @@
                     <div class="col-sm-4 d-flex justify-content-center counter-guttyr">
                         <div class="total text-center">
                             <h4 class="h4">BANGLADESH CASES</h4>
+                            <span class="icon">
+                                <i class="fas fa-spinner fa-pulse"></i>
+                            </span>
                             <span class="count">900010</span>
                         </div>
                     </div>
                     <div class="col-sm-4  d-flex justify-content-center counter-guttyr">
                         <div class="recovery text-center">
                             <h4 class="h4">RECOVERED</h4>
-                            <span class="count">4711</span>
+                            <span class="icon">
+                                <i class="fas fa-shield-virus "></i>
+
+                            </span>
+                            <span class="count">14711</span>
                         </div>
                     </div>
                     <div class="col-sm-4  d-flex justify-content-center counter-guttyr">
                         <div class="death text-center">
                             <h4 class="h4">DEATHS</h4>
-                            <span class="count">0815</span>
+                            <span class="icon">
+                                <i class="fas fa-snowflake fa-pulse"></i>
+
+                            </span>
+                            <span class="count">10815</span>
                         </div>
                     </div>
                 </div>
@@ -368,6 +436,21 @@
                             </div>
                         </div>
 
+                        <div class="swiper-slide">
+                            <div class="inner-text">
+                                <div class="setposition d-flex justify-content-center">
+                                    <div class="imgs">
+                                        <img src="assets/image/dector1.png" alt="photos">
+                                    </div>
+                                </div>
+                                <div class="infor">
+                                    <p class="para">Retail solutions bd provides a versatile and shop fitting equipment's, it solutions, retail industry from the smallest corner supermarket stores. our products and a variety of requirements. these shelving and can be
+                                        used in different types of store, pharmacy, clothing</p>
+                                    <h5 class="h5"><a href="#">MS. Lamiya Rownok</a></h5>
+                                </div>
+                            </div>
+                        </div>
+
 
                     </div>
                     <!-- Add Pagination -->
@@ -389,76 +472,78 @@
 
 
 
-    <footer style="background-image: url('assets/image/fbg1.png');">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6 gutter-25 col-lg-4">
-                    <div class="para-cover">
-                        <p class="para">We are a big business agency engaged in the internet that will help you to grow your business.</p>
+    <footer style="background-image: url('assets/image/fbgq.jpg');">
+        <div class="bg-color-rgb">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6 gutter-25 col-lg-4">
+                        <div class="para-cover">
+                            <p class="para">We are a big business agency engaged in the internet that will help you to grow your business.</p>
+                        </div>
                     </div>
-                </div>
-                <div class="col-sm-6 gutter-25 col-lg-2 d-flex justify-md-content-center">
-                    <div class="list">
-                        <h6 class="h6">Links</h6>
-                        <ul>
-                            <li>
-                                <a href="#">Home</a></a>
-                            </li>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Pricing</a></li>
-                            <li><a href="#">Products</a></li>
-                            <li><a href="#">Contact</a></li>
-                        </ul>
+                    <div class="col-sm-6 gutter-25 col-lg-2 d-flex justify-md-content-center">
+                        <div class="list">
+                            <h6 class="h6">Links</h6>
+                            <ul>
+                                <li>
+                                    <a href="#">Home</a></a>
+                                </li>
+                                <li><a href="#">Services</a></li>
+                                <li><a href="#">Pricing</a></li>
+                                <li><a href="#">Products</a></li>
+                                <li><a href="#">Contact</a></li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-                <div class="col-sm-6 gutter-25 col-lg-2 d-flex justify-md-content-center">
-                    <div class="list">
-                        <h6 class="h6">About</h6>
-                        <ul>
-                            <li><a href="#">Partners</a></li>
-                            <li><a href="#">Careers</a></li>
-                            <li><a href="#">Press</a></li>
-                            <li><a href="#">Community</a></li>
-                        </ul>
+                    <div class="col-sm-6 gutter-25 col-lg-2 d-flex justify-md-content-center">
+                        <div class="list">
+                            <h6 class="h6">About</h6>
+                            <ul>
+                                <li><a href="#">Partners</a></li>
+                                <li><a href="#">Careers</a></li>
+                                <li><a href="#">Press</a></li>
+                                <li><a href="#">Community</a></li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-                <div class="col-sm-6 gutter-25 col-lg-4 d-flex justify-md-content-end">
-                    <div class="address">
-                        <h6 class="h6">Contact</h6>
+                    <div class="col-sm-6 gutter-25 col-lg-4 d-flex justify-md-content-end">
+                        <div class="address">
+                            <h6 class="h6">Contact</h6>
 
-                        <ul>
-                            <li>Bangladesh</li>
-                            <li>noakhali sudaram thana mojib rode</li>
-                            <li>post code 543881</li>
-                        </ul>
-                        <ul>
-                            <li>Bangladesh</li>
-                            <li>noakhali sudaram thana mojib rode</li>
-                            <li>post code 543881</li>
-                        </ul>
+                            <ul>
+                                <li>Bangladesh</li>
+                                <li>noakhali sudaram thana mojib rode</li>
+                                <li>post code 543881</li>
+                            </ul>
+                            <ul>
+                                <li>Bangladesh</li>
+                                <li>noakhali sudaram thana mojib rode</li>
+                                <li>post code 543881</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="container ">
-            <div class="padding-top d-sm-flex justify-content-center justify-content-sm-between">
-                <p class="copyright text-center text-sm-left"><a href="#" style="color:#646464">&copy; 2021 hasnattanvir all rights reserved</a></p>
-                <div class="d-flex justify-content-center justify-content-sm-end">
-                    <ul class="social-icon d-flex mt-3 mt-sm-0">
-                        <li>
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fab fa-twitter"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fab fa-youtube-square"></i></a>
-                        </li>
+            <div class="container ">
+                <div class="padding-top d-sm-flex justify-content-center justify-content-sm-between">
+                    <p class="copyright text-center text-sm-left"><a href="#" style="color:#646464">&copy; 2021 hasnattanvir all rights reserved</a></p>
+                    <div class="d-flex justify-content-center justify-content-sm-end">
+                        <ul class="social-icon d-flex mt-3 mt-sm-0">
+                            <li>
+                                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fab fa-instagram"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fab fa-twitter"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fab fa-youtube-square"></i></a>
+                            </li>
 
-                    </ul>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
