one page seconts

--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
 
 
 
-<div class="canvas-animation">
-    <div style="position: absolute; left: 0px; top: 0px; overflow: hidden; width: 100%; height: 100%;">
-        <canvas id="nodes"></canvas>
-    </div>
-    <!-- </nodes.js embedding> -->
-</div>
 
 <body class="hero-anime">
+    <div class="canvas-animation">
+        <div style="position: absolute; left: 0px; top: 0px; overflow: hidden; width: 100%; height: 100%;">
+            <canvas id="nodes"></canvas>
+        </div>
+        <!-- </nodes.js embedding> -->
+    </div>
+
 
 
 
@@ -35,7 +36,7 @@
                 <div class="col-12">
                     <nav class="navbar navbar-expand-md navbar-light">
 
-                        <a class="navbar-brand" href="#">
+                        <a class="navbar-brand" href="index.html">
                             <img src="assets/image/logo-dark.png" alt="photos">
                         </a>
 
@@ -73,7 +74,7 @@
 
 
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                    <a class="nav-link" href="#">CONTACT</a>
+                                    <a class="nav-link" href="contact.html">CONTACT</a>
                                 </li>
                             </ul>
 
@@ -187,7 +188,8 @@
             </div>
     </section>
 
-    <!-- services -->
+
+    <!-- ------------ services ----------------------- -->
     <section class="service-part bg-primry">
         <div class="container">
             <div class="title_box">
