--- a/index.html
+++ b/index.html
@@ -53,20 +53,20 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ml-auto py-4 py-md-0">
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
-                                    <a class="nav-link" href="#">HOME</a>
+                                    <a class="nav-link" href="index.html">HOME</a>
 
                                 </li>
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">SERVICES</a>
+                                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="service.html" role="button" aria-haspopup="true" aria-expanded="false">SERVICES</a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="#">Action</a>
-                                        <a class="dropdown-item" href="#">Another action</a>
-                                        <a class="dropdown-item" href="#">Something else here</a>
+                                        <a class="dropdown-item" href="service.html">service 1</a>
+                                        <a class="dropdown-item" href="privatehospital.html">private hospital</a>
+                                        <a class="dropdown-item" href="govthospital.html">govt hospital</a>
                                         <a class="dropdown-item" href="#">Another action</a>
                                     </div>
                                 </li>
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                    <a class="nav-link" href="#">ABOUT</a>
+                                    <a class="nav-link" href="about.html">ABOUT</a>
                                 </li>
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                     <a class="nav-link" href="#">BLOG</a>
@@ -208,7 +208,7 @@
                             <h3 class="h3">Private covid Hospital and clineck</h3>
                             <p class="para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet deserunt suscipit, recusandae, illo natus numquam, obcaecati rem tempore fuga eligendi vitae hic at eveniet veniam. Quaerat nam quos facilis eaque.</p>
                             <div class="button text-sm-center">
-                                <a href="#" class="btn btn-primariey">Quick applay</a>
+                                <a href="privatehospital.html" class="btn btn-primariey">Quick applay</a>
                             </div>
 
                         </div>
@@ -224,7 +224,7 @@
                             <h3 class="h3">Govt covid Hospital and clineck</h3>
                             <p class="para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet deserunt suscipit, recusandae, illo natus numquam, obcaecati rem tempore fuga eligendi vitae hic at eveniet veniam. Quaerat nam quos facilis eaque.</p>
                             <div class="button text-sm-center">
-                                <a href="#" class="btn btn-primariey">Quick applay</a>
+                                <a href="govthospital.html" class="btn btn-primariey">Quick applay</a>
                             </div>
 
                         </div>
