--- a/service.html
+++ b/service.html
@@ -52,7 +52,7 @@
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="service.html" role="button" aria-haspopup="true" aria-expanded="false">SERVICES</a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="#">Action</a>
+                                        <a class="dropdown-item" href="service.html">Action</a>
                                         <a class="dropdown-item" href="#">Another action</a>
                                         <a class="dropdown-item" href="#">Something else here</a>
                                         <a class="dropdown-item" href="#">Another action</a>
@@ -84,121 +84,152 @@
         <div class="bannar_inner">
             <div class="container">
                 <h2 class="h2 text-center">
-                    Contact <span>Us</span>
+                    Service<span>s</span>
                 </h2>
             </div>
         </div>
     </section>
 
-
-    <section class="contactaddress ">
+    <section class="service_page">
         <div class="container">
-            <div class="inner-box position-relative">
-                <div class="row">
-                    <div class="col-sm-12 col-md-6">
-                        <div class="map">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d943202.4092860715!2d90.58655978653962!3d22.564721554761693!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30ab548206a5df6d%3A0x9385e3213aa6c655!2sNoakhali%2C%20Bangladesh!5e0!3m2!1snl!2snl!4v1625402645331!5m2!1snl!2snl"
-                                style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <div class="row">
+
+                <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
+                    <div class="inner_box">
+                        <div class="company_logo">
+                            <img src="assets/image/img1.png" alt="photos">
                         </div>
-                    </div>
-
-                    <div class="col-sm-12 col-md-6">
-                        <div class="address_text">
-                            <div class="address d-flex mt-4">
-
-                                <div class="icon">
-                                    <i class="fas fa-map-marker-alt"></i>
-                                </div>
-                                <div class="text">
-                                    <h5 class="h5">
-                                        Address
-                                    </h5>
-                                    <span class="span">Moonshine St. 14/05 Light City,
-                                   London, United Kingdom</span>
-                                </div>
-                            </div>
-
-
-
-                            <div class="pnone d-flex mt-4">
-
-                                <div class="icon">
-                                    <i class="fas fa-phone-square-alt"></i>
-                                </div>
-                                <div class="text">
-                                    <h5 class="h5">
-                                        Phone
-                                    </h5>
-                                    <span class="span">+880 1625010631</span>
-                                    <br>
-                                    <span class="span">+880 1714310845</span>
-                                </div>
-
-                            </div>
-
-
-                            <div class="email d-flex mt-4">
-                                <div class="icon">
-                                    <i class="far fa-envelope"></i>
-                                </div>
-                                <div class="text">
-                                    <h5 class="h5">Address
-                                    </h5>
-                                    <span class="span">
-                                         <a href="Mailto:sandbox@email.com">hasnattanvir014gmail.com</a>
-                                     </span>
-                                    <br>
-                                    <span class="span">
-                                         <a href="Mailto:sandbox@email.com">hasnattanvir014gmail.com</a>
-                                     </span>
-                                </div>
-
-                            </div>
+                        <div class="text-info text-center">
+                            <h4>Hasnattanvir Hospital</h4>
+                            <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
+                            <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
+                            <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
+                            <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
                         </div>
                     </div>
                 </div>
+
+
+
+                <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
+                    <div class="inner_box">
+                        <div class="company_logo">
+                            <img src="assets/image/img1.png" alt="photos">
+                        </div>
+                        <div class="text-info text-center">
+                            <h4>Hasnattanvir Hospital</h4>
+                            <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
+                            <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
+                            <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
+                            <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
+                    <div class="inner_box">
+                        <div class="company_logo">
+                            <img src="assets/image/img1.png" alt="photos">
+                        </div>
+                        <div class="text-info text-center">
+                            <h4>Hasnattanvir Hospital</h4>
+                            <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
+                            <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
+                            <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
+                            <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
+                    <div class="inner_box">
+                        <div class="company_logo">
+                            <img src="assets/image/img1.png" alt="photos">
+                        </div>
+                        <div class="text-info text-center">
+                            <h4>Hasnattanvir Hospital</h4>
+                            <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
+                            <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
+                            <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
+                            <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
+                    <div class="inner_box">
+                        <div class="company_logo">
+                            <img src="assets/image/img1.png" alt="photos">
+                        </div>
+                        <div class="text-info text-center">
+                            <h4>Hasnattanvir Hospital</h4>
+                            <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
+                            <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
+                            <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
+                            <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
+                    <div class="inner_box">
+                        <div class="company_logo">
+                            <img src="assets/image/img1.png" alt="photos">
+                        </div>
+                        <div class="text-info text-center">
+                            <h4>Hasnattanvir Hospital</h4>
+                            <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
+                            <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
+                            <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
+                            <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
+                    <div class="inner_box">
+                        <div class="company_logo">
+                            <img src="assets/image/img1.png" alt="photos">
+                        </div>
+                        <div class="text-info text-center">
+                            <h4>Hasnattanvir Hospital</h4>
+                            <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
+                            <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
+                            <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
+                            <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6  col-md-4 col-lg-3 mb-4">
+                    <div class="inner_box">
+                        <div class="company_logo">
+                            <img src="assets/image/img1.png" alt="photos">
+                        </div>
+                        <div class="text-info text-center">
+                            <h4>Hasnattanvir Hospital</h4>
+                            <span><a href="#" class="btn btn-primariey"># 123 bed covid</a></span>
+                            <span><a href="#" class="btn btn-primariey"># 230 icu bed</a> </span>
+                            <span><a href="#" class="btn btn-primariey"># free 230 bed</a></span>
+                            <span><a href="#" class="btn btn-primariey"># 5 dector icu bed</a></span>
+                        </div>
+                    </div>
+                </div>
+
             </div>
+
+        </div>
         </div>
     </section>
 
-    <section class="contactform">
-        <div class="container">
-            <div class="title text-center">
-                <h2 class="h2">Drop Us a <span>Line</span></h2>
-                <p>Reach out to us from our contact form and we will get back to you shortly.</p>
-            </div>
-        </div>
 
-        <div class="container resize">
-            <form action="#">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <input class="form_control" type="text" name="firstname" id="fname" placeholder="First Name *" required>
-                    </div>
-                    <div class="col-sm-6">
-                        <input class="form_control" type="text" name="lastname" id="lname" placeholder="Last Name *" required>
 
-                    </div>
-                    <div class="col-sm-6">
-                        <input class="form_control" type="email" name="email" id="Email" placeholder="Email *" required>
 
-                    </div>
-                    <div class="col-sm-6">
-                        <input class="form_control" type="text" name="email" id="Email" placeholder="Phone *" required>
 
-                    </div>
-                    <div class="col-sm-6">
-                        <textarea name="massage" id="msg" cols="30" rows="10"></textarea>
-
-                    </div>
-
-                </div>
-                <div class="send-btn text-center">
-                    <a href="#" class="btn btn-primariey">Send Message</a>
-                </div>
-            </form>
-        </div>
-    </section>
 
 
 
@@ -318,16 +349,6 @@
             speed: 20
         });
     </script>
-
-
-
-
-
-
-
-
-
-
 </body>
 
 </html>
