--- a/index.html
+++ b/index.html
@@ -69,17 +69,20 @@
                                     <a class="nav-link" href="about.html">ABOUT</a>
                                 </li>
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                    <a class="nav-link" href="#">BLOG</a>
+                                    <a class="nav-link" href="blog.html">BLOG</a>
                                 </li>
-
-
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                     <a class="nav-link" href="contact.html">CONTACT</a>
                                 </li>
+
+
+
                             </ul>
 
                         </div>
-                        <a href="#" class="btn btn-primariey">Help Line</a>
+                        <div>
+                            <a href="#" class="btn btn-primariey">Help Line</a>
+                        </div>
 
                     </nav>
                 </div>
